--- a/Savio/SavingPlanSetupCells/ClearButtonTableViewCell.xib
+++ b/Savio/SavingPlanSetupCells/ClearButtonTableViewCell.xib
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -15,29 +14,49 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="39"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oj0-gm-vUx">
-                        <rect key="frame" x="8" y="20" width="304" height="20"/>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oj0-gm-vUx">
+                        <rect key="frame" x="0.0" y="19" width="320" height="20"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="20" id="eAd-52-m9h"/>
+                            <constraint firstAttribute="height" constant="20" id="WEL-mq-Ghm"/>
+                            <constraint firstAttribute="width" constant="320" id="jyf-KM-ZeQ"/>
                         </constraints>
                         <state key="normal">
                             <attributedString key="attributedTitle">
                                 <fragment content="Clear">
                                     <attributes>
                                         <color key="NSColor" red="0.36470588240000001" green="0.37254901959999998" blue="0.3921568627" alpha="1" colorSpace="calibratedRGB"/>
-                                        <font key="NSFont" metaFont="system" size="14"/>
+                                        <font key="NSFont" size="14" name="GothamRounded-Book"/>
+                                        <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                         <integer key="NSUnderline" value="1"/>
                                     </attributes>
                                 </fragment>
                             </attributedString>
                         </state>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="WEL-mq-Ghm"/>
+                                <exclude reference="jyf-KM-ZeQ"/>
+                            </mask>
+                        </variation>
                     </button>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="oj0-gm-vUx" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="12" id="AW2-X7-Aqr"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="oj0-gm-vUx" secondAttribute="trailing" id="HYu-4H-Hhv"/>
-                    <constraint firstItem="oj0-gm-vUx" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="ctY-8n-eoF"/>
+                    <constraint firstAttribute="trailing" secondItem="oj0-gm-vUx" secondAttribute="trailing" id="BVl-WL-G0y"/>
+                    <constraint firstAttribute="bottom" secondItem="oj0-gm-vUx" secondAttribute="bottom" id="PhD-W8-BP9"/>
+                    <constraint firstItem="oj0-gm-vUx" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="RSD-qa-B8w"/>
+                    <constraint firstAttribute="trailing" secondItem="oj0-gm-vUx" secondAttribute="trailing" id="Yam-cY-4UQ"/>
+                    <constraint firstItem="oj0-gm-vUx" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="ipQ-MP-R1m"/>
+                    <constraint firstItem="oj0-gm-vUx" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="teA-Mw-jQm"/>
+                    <constraint firstItem="oj0-gm-vUx" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="19" id="u6y-DD-3Vd"/>
+                    <constraint firstItem="oj0-gm-vUx" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="19" id="ygs-4v-Ghw"/>
                 </constraints>
+                <variation key="default">
+                    <mask key="constraints">
+                        <exclude reference="Yam-cY-4UQ"/>
+                        <exclude reference="teA-Mw-jQm"/>
+                        <exclude reference="ygs-4v-Ghw"/>
+                    </mask>
+                </variation>
             </tableViewCellContentView>
             <connections>
                 <outlet property="clearButton" destination="oj0-gm-vUx" id="W8O-Wr-Lfn"/>
