--- a/Savio/SavingPlanSetupCells/OfferTableViewCell.xib
+++ b/Savio/SavingPlanSetupCells/OfferTableViewCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -125,6 +125,11 @@
                     <constraint firstItem="g6S-sn-vJh" firstAttribute="top" secondItem="AMo-jI-5vq" secondAttribute="bottom" constant="2" id="t0v-sg-2EB"/>
                     <constraint firstItem="g6S-sn-vJh" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="74" id="vcG-vO-6dL"/>
                 </constraints>
+                <variation key="default">
+                    <mask key="constraints">
+                        <exclude reference="VgY-Ah-TqJ"/>
+                    </mask>
+                </variation>
             </tableViewCellContentView>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <connections>
