--- a/Savio/SavingPlanSetupCells/SavingPlanDatePickerTableViewCell.xib
+++ b/Savio/SavingPlanSetupCells/SavingPlanDatePickerTableViewCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -43,7 +43,7 @@
                             <outlet property="delegate" destination="-1" id="8gZ-nJ-6Z2"/>
                         </connections>
                     </textField>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="generic-calendar@1x.png" translatesAutoresizingMaskIntoConstraints="NO" id="FGe-Uz-7bK">
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="generic-calendar.png" translatesAutoresizingMaskIntoConstraints="NO" id="FGe-Uz-7bK">
                         <rect key="frame" x="40" y="36" width="17" height="18"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="17" id="Awl-G7-DFx"/>
@@ -56,15 +56,21 @@
                     <constraint firstItem="PHM-mG-7Lk" firstAttribute="top" secondItem="2n4-Vb-xOu" secondAttribute="bottom" constant="3" id="Nh2-PQ-r5C"/>
                     <constraint firstItem="PHM-mG-7Lk" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="30" id="RLr-2U-hVo"/>
                     <constraint firstItem="FGe-Uz-7bK" firstAttribute="top" secondItem="2n4-Vb-xOu" secondAttribute="bottom" constant="5" id="TYR-8a-NgR"/>
+                    <constraint firstItem="FGe-Uz-7bK" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="28" id="Tcg-86-ffw"/>
                     <constraint firstItem="FGe-Uz-7bK" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="32" id="Uhr-vr-Kez"/>
                     <constraint firstItem="2n4-Vb-xOu" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="VmQ-YG-uz6"/>
                     <constraint firstItem="2n4-Vb-xOu" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="3" id="j5Q-xp-dxk"/>
                     <constraint firstAttribute="trailingMargin" secondItem="PHM-mG-7Lk" secondAttribute="trailing" constant="30" id="n21-rJ-hcO"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="2n4-Vb-xOu" secondAttribute="bottom" constant="30" id="oPX-ZJ-1US"/>
                     <constraint firstItem="PHM-mG-7Lk" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="26" id="ob9-Hv-tDe"/>
+                    <constraint firstItem="PHM-mG-7Lk" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="26" id="vf0-C1-3HF"/>
                 </constraints>
                 <variation key="default">
                     <mask key="constraints">
+                        <exclude reference="oPX-ZJ-1US"/>
+                        <exclude reference="Nh2-PQ-r5C"/>
                         <exclude reference="ob9-Hv-tDe"/>
+                        <exclude reference="TYR-8a-NgR"/>
                     </mask>
                 </variation>
             </tableViewCellContentView>
@@ -78,6 +84,6 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="generic-calendar@1x.png" width="12" height="12"/>
+        <image name="generic-calendar.png" width="17" height="18"/>
     </resources>
 </document>
