--- a/Savio/SwitchPlan/SASwitchViewController.xib
+++ b/Savio/SwitchPlan/SASwitchViewController.xib
@@ -1,9 +1,18 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <mutableArray key="GothamRounded-Light.otf">
+            <string>GothamRounded-Light</string>
+        </mutableArray>
+        <mutableArray key="GothamRounded-Medium.otf">
+            <string>GothamRounded-Medium</string>
+            <string>GothamRounded-Medium</string>
+        </mutableArray>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SASwitchViewController" customModule="Savio" customModuleProvider="target">
             <connections>
@@ -14,7 +23,137 @@
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bo7-N7-RzW">
+                    <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aEn-X9-th9">
+                            <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            <subviews>
+                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="savivo-logo.png" translatesAutoresizingMaskIntoConstraints="NO" id="WNR-qh-7mt">
+                                    <rect key="frame" x="280" y="50" width="40" height="40"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="40" id="X4H-cQ-lrH"/>
+                                        <constraint firstAttribute="height" constant="40" id="Zx7-qX-Fes"/>
+                                    </constraints>
+                                </imageView>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Switch saving plan" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bNQ-Ol-z7a">
+                                    <rect key="frame" x="193" y="105" width="215" height="66"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="66" id="eQL-oS-umb"/>
+                                        <constraint firstAttribute="width" constant="215" id="mvY-OO-CXh"/>
+                                    </constraints>
+                                    <fontDescription key="fontDescription" name="GothamRounded-Medium" family="Gotham Rounded" pointSize="33"/>
+                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You have more than one active saving plan, use this screen to select the plan to manage." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FRX-RL-1RY">
+                                    <rect key="frame" x="110" y="193" width="380" height="47"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="47" id="Van-A1-Mu0"/>
+                                        <constraint firstAttribute="width" constant="380" id="vgm-EL-BwG"/>
+                                    </constraints>
+                                    <fontDescription key="fontDescription" name="GothamRounded-Light" family="Gotham Rounded" pointSize="17"/>
+                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Tv5-BH-QrD">
+                                    <rect key="frame" x="40" y="257" width="520" height="105"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="87I-AG-E0f">
+                                            <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="100" id="Wnk-zj-wAq"/>
+                                                <constraint firstAttribute="height" constant="100" id="qdm-d7-nso"/>
+                                            </constraints>
+                                        </imageView>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Yet-8I-vPx">
+                                            <rect key="frame" x="420" y="0.0" width="100" height="100"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="100" id="1N8-Xz-Fk3"/>
+                                                <constraint firstAttribute="height" constant="100" id="Qjy-Eg-VqY"/>
+                                            </constraints>
+                                        </imageView>
+                                    </subviews>
+                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <constraints>
+                                        <constraint firstItem="87I-AG-E0f" firstAttribute="top" secondItem="Tv5-BH-QrD" secondAttribute="top" id="1CQ-OQ-BVa"/>
+                                        <constraint firstItem="87I-AG-E0f" firstAttribute="leading" secondItem="Tv5-BH-QrD" secondAttribute="leading" id="U3g-rM-IGm"/>
+                                        <constraint firstAttribute="height" constant="105" id="cpH-Nk-N2m"/>
+                                        <constraint firstAttribute="trailing" secondItem="Yet-8I-vPx" secondAttribute="trailing" id="kOc-jU-DnN"/>
+                                        <constraint firstItem="Yet-8I-vPx" firstAttribute="top" secondItem="Tv5-BH-QrD" secondAttribute="top" id="ua8-Q1-oIL"/>
+                                    </constraints>
+                                </view>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vhd-pc-SDe" userLabel="confirm passcode">
+                                    <rect key="frame" x="32" y="393" width="536" height="53"/>
+                                    <color key="backgroundColor" red="0.96862745100000003" green="0.58039215690000001" blue="0.21960784310000001" alpha="1" colorSpace="calibratedRGB"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="53" id="BEH-tI-gMr"/>
+                                    </constraints>
+                                    <userDefinedRuntimeAttributes>
+                                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                            <integer key="value" value="5"/>
+                                        </userDefinedRuntimeAttribute>
+                                    </userDefinedRuntimeAttributes>
+                                </view>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xqt-QM-C44">
+                                    <rect key="frame" x="32" y="392" width="536" height="50"/>
+                                    <color key="backgroundColor" red="0.95686274510000002" green="0.69019607839999997" blue="0.2274509804" alpha="1" colorSpace="calibratedRGB"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="50" id="6aq-fL-JBU"/>
+                                    </constraints>
+                                    <fontDescription key="fontDescription" name="GothamRounded-Medium" family="Gotham Rounded" pointSize="20"/>
+                                    <state key="normal" title="Confirm">
+                                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    </state>
+                                </button>
+                            </subviews>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="600" id="0lG-1o-45B"/>
+                                <constraint firstAttribute="trailing" secondItem="vhd-pc-SDe" secondAttribute="trailing" constant="32" id="AJT-Dr-FFM"/>
+                                <constraint firstAttribute="trailing" secondItem="Tv5-BH-QrD" secondAttribute="trailing" constant="40" id="AmT-m9-QH3"/>
+                                <constraint firstItem="Xqt-QM-C44" firstAttribute="top" secondItem="Tv5-BH-QrD" secondAttribute="bottom" constant="30" id="F24-4D-aRw"/>
+                                <constraint firstItem="FRX-RL-1RY" firstAttribute="top" secondItem="bNQ-Ol-z7a" secondAttribute="bottom" constant="22" id="F6k-nN-Da7"/>
+                                <constraint firstItem="Tv5-BH-QrD" firstAttribute="leading" secondItem="aEn-X9-th9" secondAttribute="leading" constant="40" id="GGR-W2-IwE"/>
+                                <constraint firstItem="vhd-pc-SDe" firstAttribute="top" secondItem="Tv5-BH-QrD" secondAttribute="bottom" constant="31" id="Jt5-SZ-2lZ"/>
+                                <constraint firstItem="FRX-RL-1RY" firstAttribute="centerX" secondItem="aEn-X9-th9" secondAttribute="centerX" id="N3Q-jV-gat"/>
+                                <constraint firstItem="Xqt-QM-C44" firstAttribute="leading" secondItem="aEn-X9-th9" secondAttribute="leading" constant="32" id="VMI-RQ-GfT"/>
+                                <constraint firstItem="vhd-pc-SDe" firstAttribute="leading" secondItem="aEn-X9-th9" secondAttribute="leading" constant="32" id="X7J-vX-GOR"/>
+                                <constraint firstItem="Tv5-BH-QrD" firstAttribute="top" secondItem="FRX-RL-1RY" secondAttribute="bottom" constant="17" id="YeK-bT-Ypg"/>
+                                <constraint firstItem="bNQ-Ol-z7a" firstAttribute="top" secondItem="WNR-qh-7mt" secondAttribute="bottom" constant="15" id="Z8r-RH-QMH"/>
+                                <constraint firstItem="WNR-qh-7mt" firstAttribute="centerX" secondItem="aEn-X9-th9" secondAttribute="centerX" id="kIn-ke-xjS"/>
+                                <constraint firstItem="bNQ-Ol-z7a" firstAttribute="centerX" secondItem="aEn-X9-th9" secondAttribute="centerX" id="l2t-tu-3rB"/>
+                                <constraint firstAttribute="trailing" secondItem="Xqt-QM-C44" secondAttribute="trailing" constant="32" id="uZa-W2-P4k"/>
+                                <constraint firstItem="WNR-qh-7mt" firstAttribute="top" secondItem="aEn-X9-th9" secondAttribute="top" constant="50" id="utL-8x-u1Y"/>
+                            </constraints>
+                        </view>
+                    </subviews>
+                    <constraints>
+                        <constraint firstItem="aEn-X9-th9" firstAttribute="top" secondItem="Bo7-N7-RzW" secondAttribute="top" id="KBc-Hn-mjp"/>
+                        <constraint firstAttribute="bottom" secondItem="aEn-X9-th9" secondAttribute="bottom" id="Q68-iO-yla"/>
+                        <constraint firstItem="aEn-X9-th9" firstAttribute="leading" secondItem="Bo7-N7-RzW" secondAttribute="leading" id="SZ5-NU-Dbg"/>
+                        <constraint firstItem="aEn-X9-th9" firstAttribute="width" secondItem="Bo7-N7-RzW" secondAttribute="width" id="Sry-lW-Cfg"/>
+                        <constraint firstAttribute="trailing" secondItem="aEn-X9-th9" secondAttribute="trailing" id="ZbG-Nu-Fkw"/>
+                        <constraint firstItem="aEn-X9-th9" firstAttribute="height" relation="greaterThanOrEqual" secondItem="Bo7-N7-RzW" secondAttribute="height" id="psg-mN-xL6"/>
+                    </constraints>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="psg-mN-xL6"/>
+                        </mask>
+                    </variation>
+                </scrollView>
+            </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstItem="Bo7-N7-RzW" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="BkT-ii-4Jd"/>
+                <constraint firstItem="Bo7-N7-RzW" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="ZUf-Lq-XlO"/>
+                <constraint firstAttribute="bottom" secondItem="Bo7-N7-RzW" secondAttribute="bottom" id="bmW-9K-dl9"/>
+                <constraint firstAttribute="trailing" secondItem="Bo7-N7-RzW" secondAttribute="trailing" id="k5R-1b-cM9"/>
+            </constraints>
         </view>
     </objects>
+    <resources>
+        <image name="savivo-logo.png" width="85" height="85"/>
+    </resources>
 </document>
